# smart-sky-bot

./: .env.example  .gitignore  README.md  bot.py  config.py  database.py  pyproject.toml  requirements.txt  utils.py  weather.py
handlers/: __init__.py  city.py  onboarding.py  profile.py  start.py  subscription.py  weather.py
keyboards/: main.py  profile.py
middleware/: onboarding.py  premium.py
models/: __init__.py  states.py
services/: ai_recommendations.py  gismeteo.py  payment.py  profile_check.py  recommendation.py  tips.py  weather_forecast.py  weather_monitor.py  weather_text.py  web_search.py
utils/: __init__.py
