[project]
name = "smart-sky-bot"
version = "1.0.0"
description = "Персональный погодный помощник в Telegram"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.27,<4.0",
    "aiohttp>=3.9",
    "aiohttp-socks>=0.11.0",
    "ddgs>=9.14.4",
    "python-dotenv>=1.1",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
